--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
     <script type="text/javascript" src="./js/vendor/musicmetadata.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
     <script type="text/javascript" src="./js/dragndrop.js"></script>
+    <script type="text/javascript" src="./js/display-music.js"></script>
   </body>
 </html>
