Displays songs meta data in cards

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     </header>
     <!-- If user has no music -->
     <div class="firstStart">
-      <h2>Almost there!</h2>
-      <p>Drag your music folder here</p>
-      <button id="openFile" onclick="openFile();">...or select individual files</button>
+      <h2>Almost done!</h2>
+      <p>Drag and drop your music folder here</p>
     </div>
     <!-- If user has music -->
     <div class="tab-content content">
