--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <script type="text/javascript">window.$ = window.jQuery = require('./js/vendor/jquery.min.js');</script>
     <script type="text/javascript" src="./js/vendor/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/vendor/musicmetadata.js"></script>
-    <script type="text/javascript" src="./js/dragndrop.js"></script>
+    <script type="text/javascript" src="./js/dragndrop-min.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
   </body>
 </html>
