--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>DiscMan</title>
-    <link rel="stylesheet" href="./css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
       <p id="appTitle">DiscMan</p>
       <ul class="nav nav-pills centeredPills">
-        <li onmousedown="return false"><a data-toggle="pill" href="#songsTab">Songs</a></li>
-        <li onmousedown="return false" class="active"><a data-toggle="pill" href="#albumsTab">Albums</a></li>
-        <li onmousedown="return false"><a data-toggle="pill" href="#artistsTab">Artists</a></li>
+        <li onmousedown="return false"><a href="#" class="songsTab">Songs</a></li>
+        <li onmousedown="return false" class="active"><a href="#" class="albumsTab">Albums</a></li>
+        <li onmousedown="return false"><a href="#" class="artistsTab">Artists</a></li>
       </ul>
     </header>
     <!-- If user has no music -->
@@ -58,7 +57,6 @@
       </div>
     </footer>
     <script type="text/javascript">window.$ = window.jQuery = require('./js/vendor/jquery.min.js');</script>
-    <script type="text/javascript" src="./js/vendor/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/vendor/musicmetadata.js"></script>
     <script type="text/javascript" src="./js/dragndrop-min.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
