:wrench: started webpack config

--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
         <div class="soundonoff"></div>
       </div>
     </footer>
-    <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="./bundle.js"></script>
   </body>
 </html>
