:wrench: compile images with webpack

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>DiscMan</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
   </head>
   <body>
     <header>
@@ -56,6 +56,6 @@
         <div class="soundonoff"></div>
       </div>
     </footer>
-    <script type="text/javascript" src="./bundle.js"></script>
+    <script type="text/javascript" src="./dist/bundle.js"></script>
   </body>
 </html>
