:construction: added create song card function

--- a/pages/artists.html
+++ b/pages/artists.html
@@ -55,6 +55,6 @@
         <div class="soundonoff"></div>
       </div>
     </footer>
-    <script type="text/javascript" src="./dist/bundle.js"></script>
+    <script type="text/javascript" src="../dist/bundle.js"></script>
   </body>
 </html>
