--- a/pages/albums.html
+++ b/pages/albums.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>DiscMan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Albums - DiscMan</title>
   </head>
   <body>
     <!-- Insert header from js -->
 
-    <section id="albumsTab" class="content">
+    <section id="albums" class="content">
       <!-- Populate with songs from library -->
     </section>
 
