:construction: switch tabs functions

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <header>
       <p id="appTitle">DiscMan</p>
       <ul class="centeredPills">
-        <li onmousedown="return false" class="tab">
-          <a href="#" class="tab titles">Titles</a>
+        <li onmousedown="return false" class="tab" id="titles">
+          <a href="#">Titles</a>
         </li>
-        <li onmousedown="return false" class="tab active">
-          <a href="#" class="tab albums">Albums</a>
+        <li onmousedown="return false" class="tab active" id="albums">
+          <a href="#">Albums</a>
         </li>
-        <li onmousedown="return false" class="tab">
-          <a href="#" class="tab artists">Artists</a>
+        <li onmousedown="return false" class="tab" id="artists">
+          <a href="#">Artists</a>
         </li>
       </ul>
     </header>
