:art: cleaner code

--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
 
     <section id="titles" class="content">
       <!-- Populate with songs from library -->
+      <p>titles</p>
     </section>
 
-    <section id="albums active" class="content">
+    <section id="albums" class="content active">
       <!-- Populate with albums from library -->
+      <p>albums</p>
     </section>
 
     <section id="artists" class="content">
       <!-- Populate with artists from library -->
+      <p>artists</p>
     </section>
 
     <footer class="player">
