:sparkles: functional tab switch

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
       </ul>
     </header>
 
-    <section id="titles" class="content">
+    <section data-section="titles" class="content">
       <!-- Populate with songs from library -->
       <p>titles</p>
     </section>
 
-    <section id="albums" class="content active">
+    <section data-section="albums" class="content active">
       <!-- Populate with albums from library -->
       <p>albums</p>
     </section>
 
-    <section id="artists" class="content">
+    <section data-section="artists" class="content">
       <!-- Populate with artists from library -->
       <p>artists</p>
     </section>
