:construction: prepare drag and drop support

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <!-- If user has no music -->
-    <div class="firstStart">
+    <div class="first-start">
       <h2>Almost done!</h2>
       <p>Drag and drop your music folder here</p>
     </div>
