:bug: fixed duplicates rendering

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!-- If user has no music -->
     <div class="first-start">
-      <h2>Almost done!</h2>
-      <p>Drag and drop your music folder here</p>
+      <h2>Add some music</h2>
+      <p>Drag and drop your music folders here</p>
     </div>
 
     <!-- If user has music -->
