:bento: added icons to dom

--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
     </main>
 
     <footer class="player">
-      <input id="timeControl" type="range" min="0" max="1" step="0.01" value="0"></input>
+      <input id="time-control" type="range" min="0" max="1" step="0.01" value="0"></input>
       <audio></audio>
       <div class="art"></div>
       <div class="data">
         <p class="title">${media.title}</p>
         <p class="artist">${media.details}</p>
-        <div class="mediaControls">
+        <div class="media-controls">
           <div class="previous"></div>
-          <div class="playpause playing"></div>
+          <div class="play-pause playing"></div>
           <div class="next"></div>
         </div>
       </div>
       <div class="volume">
         <input id="vol-control" type="range" min="0" max="1" step="0.01" value="1"></input>
-        <div class="soundonoff"></div>
+        <div class="icon sound-on"></div>
       </div>
     </footer>
 
