--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="volume">
-        <input id="vol-control" type="range" min="0" max="1" step="0.01" value="1"></input>
+        <input class="vol-control" type="range" min="0" max="1" step="0.01" value="1"></input>
         <div class="icon sound-on"></div>
       </div>
     </footer>
