:sparkles: advance position in song

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </main>
 
     <footer class="player">
-      <input id="time-control" type="range" min="0" max="1" step="0.01" value="0"></input>
+      <input class="time-control" type="range" min="0" max="1" step="0.01" value="0"></input>
       <audio></audio>
       <div class="art"></div>
       <div class="data">
